--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Group 2</string>
     <string name="group_name">Group 2</string>
+
+    <string name="at_your_service">At Your Service</string>
 </resources>
